--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="icon" href="assets/thumb.png" type="image/x-icon" />
     <script type="text/javascript" src="assets/js/script.js"></script>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <meta property="og:title" content="MEGUMI-MD" />
+    <meta property="og:title" content="bálzz-dev" />
     <meta property="og:description" content="All Colaboration Whatsap Bot" />
-    <meta property="og:image" content="https://katou.my.id/assets/yuuka.png" />
+    <meta property="og:image" content="https://katou.my.id/assets/thumb.png" />
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script> 
   <div class="gaspar" data-magic-cursor="show" data-color="crimson">
     <style>
@@ -26,7 +26,7 @@
 <audio autoplay="true" src="https://pomf2.lain.la/f/nlw7irq2.opus"></audio>
     </style>
     <div id="particles-js"></div>
-    <img id="Photo" src="assets/yuuka.png" alt="Yuuka">
+    <img id="Photo" src="assets/thumb.png" alt="Yuuka">
     <spam id="Name">ALL COLABORATION WHATSAPP BOT </spam>
     </spam>
     <div id="linksbutton" class="pl-4 pr-4"> 
@@ -39,13 +39,14 @@
         <a id="link6" class="links" href="https://chat.whatsapp.com/FLq42dyLTlw7sH9OGMDoeI" target="_blank" style="border-radius: 15px;"> &nbsp;😼 Markonah ( Group Room )</a>
         <a id="link7" class="links" href="https://chat.whatsapp.com/J7NuyOEcYAv9XtEeiBLZiz" target="_blank" style="border-radius: 15px;">&nbsp;🤖 Public Bot ( Group Room )</a> 
         <a id="link8" class="links" href="https://chat.whatsapp.com/JXrYQjUNhzn25HCknCxRVy" target="_blank" style="border-radius: 15px;">&nbsp;😺 Kurumi ( Group Room )</a>
-        <a id="link9" class="links" href="https://chat.whatsapp.com/Lv1HjHE9IwyIUIKaOHfZFY" target="_blank" style="border-radius: 15px;">&nbsp;🦠 Miyuki ( Group Room )</a>    
+        <a id="link9" class="links" href="https://chat.whatsapp.com/CCHamJgyAda12TJ3yAE6ku" target="_blank" style="border-radius: 15px;">&nbsp;💫 Elaina FD ( Group Room )</a>  
         <a id="link10" class="links" href="https://chat.whatsapp.com/Iv8DVG1FzKHJXiYoc27kHB" target="_blank" style="border-radius: 15px;">&nbsp;🌬️ Shiroko ( Group Room )</a>      
         <a id="link11" class="links" href="https://chat.whatsapp.com/K8erxiAVg7YBNAyeGdoggT" target="_blank" style="border-radius: 15px;">&nbsp;🍃 Bot Umum ( Group Room  )</a>      
         <a id="link12"  class="links" href="https://chat.whatsapp.com/FotRFYQHEFh3merTWRvS12" target="_blank" style="border-radius: 15px;">&nbsp;☔ Elaina MD ( Group Room  )</a>
         <a id="link13"  class="links" href="https://chat.whatsapp.com/HWzZKkZC5ceAexaEvGJe7P" target="_blank" style="border-radius: 15px;">&nbsp;✨ String MD ( Group Room  )</a>
-        <a id="14"  class="links" href="https://chat.whatsapp.com/HWzZKkZC5ceAexaEvGJe7P" target="_blank" style="border-radius: 15px;">&nbsp;👌🏻👈🏻 Senzu Bot ( Group Room  )</a>
-        <a id="14"  class="links" href="https://chat.whatsapp.com/BGmhs1Qein2CRlgAwYcA5Z" target="_blank" style="border-radius: 15px;">&nbsp;💧 Ryo Yamada ( Group Room  )</a>
+        <a id="14"  class="links" href="https://chat.whatsapp.com/CjpB21FSK9Z1l8YoS2hgv1" target="_blank" style="border-radius: 15px;">&nbsp;👌🏻👈🏻 Senzu Bot ( Group Room  )</a>
+        <a id="15"  class="links" href="https://chat.whatsapp.com/BGmhs1Qein2CRlgAwYcA5Z" target="_blank" style="border-radius: 15px;">&nbsp;💧 Ryo Yamada ( Group Room  )</a> 
+        <a id="link16" class="links" href="https://chat.whatsapp.com/Lv1HjHE9IwyIUIKaOHfZFY" target="_blank" style="border-radius: 15px;">&nbsp;🦠 Miyuki ( Group Room )</a>
     </div> 
     </script>
     <div id="custom-popup" class="custom-popup">
